Larger heading font size, new bubblegum sans font import, text descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
   <head>
     <title>Reptiles Everywhere</title>
   </head>
