Adds fix for EmbeddedBook navlinks

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="icon" href="http://www.pngmart.com/files/6/Horned-Lizard-Transparent-PNG.png" />
+    <link rel="icon" href="https://www.pngmart.com/files/6/Horned-Lizard-Transparent-PNG.png" />
   <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
   <head>
     <title>Reptiles Everywhere</title>
